# svo

./: .gitignore
1/: CMakeLists.txt
1/src/: svo.h  svomain.cpp
